--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div id="category-list">
-                <p class="item-menu">Go For Hunt</p>
+                <p class="item-menu">Welcome For food delievery website</p>
                 <div class="border"></div>        
                         
             </div>
